--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 4de21ef
-	trimbase = 
+	trim = rc_reason_clients
+	base = f8a8153
+	trimbase = 4de21ef
 	parent = upstream
 	previous = 613f37b
