--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 6d7eb25
-	trimbase = 
+	trim = rc_reason_msgs
+	base = 63d783b
+	trimbase = 6d7eb25
 	parent = upstream
 	previous = 613f37b
