--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f8a8153
+	base = f5e914e
 	trimbase = 
 	parent = release/melodic/rc_reason_clients
-	previous = 
+	previous = f8a8153
