--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 43b54e2
+	base = f5a300e
 	trimbase = 
 	parent = debian/melodic/rc_reason_clients
-	previous = 
+	previous = 43b54e2
