--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 63d783b
+	base = d5575d5
 	trimbase = 
 	parent = release/melodic/rc_reason_msgs
-	previous = 
+	previous = 63d783b
