--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 94bd258
+	base = ef9a458
 	trimbase = 
 	parent = debian/melodic/rc_reason_msgs
-	previous = 
+	previous = 94bd258
