--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rc_reason_clients
-	base = 9366747
-	trimbase = 
+	base = 55c270e
+	trimbase = 9366747
 	parent = upstream
 	previous = c7ab50a
