--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rc_reason_msgs
-	base = 1bf8744
-	trimbase = 
+	base = e49d89a
+	trimbase = 1bf8744
 	parent = upstream
 	previous = c7ab50a
