--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = b04ed92
-	trimbase = 
+	trim = rc_reason_clients
+	base = 88d785c
+	trimbase = b04ed92
 	parent = upstream
 	previous = c7ab50a
