--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = edea5ec
-	trimbase = 
+	trim = rc_reason_msgs
+	base = 4f2e03c
+	trimbase = edea5ec
 	parent = upstream
 	previous = c7ab50a
