--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 88d785c
+	base = 784abd0
 	trimbase = 
 	parent = release/noetic/rc_reason_clients
-	previous = 
+	previous = 88d785c
