--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 58201db
+	base = aad240d
 	trimbase = 
 	parent = debian/noetic/rc_reason_clients
-	previous = 
+	previous = 58201db
