--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4f2e03c
+	base = 5b1c612
 	trimbase = 
 	parent = release/noetic/rc_reason_msgs
-	previous = 
+	previous = 4f2e03c
