--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2d4a74b
+	base = 34b0a36
 	trimbase = 
 	parent = debian/noetic/rc_reason_msgs
-	previous = 
+	previous = 2d4a74b
