--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4c2db20
+	base = be3385f
 	trimbase = 
 	parent = debian/noetic/rc_reason_clients
-	previous = 
+	previous = 4c2db20
