--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ac8a78f
+	base = e86c71c
 	trimbase = 
 	parent = debian/noetic/rc_reason_msgs
-	previous = 
+	previous = ac8a78f
