--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6b48f77
+	base = 2cf6f08
 	trimbase = 
 	parent = rpm/noetic/rc_reason_clients
-	previous = 
+	previous = 6b48f77
