--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = cffe933
+	base = 33b43c1
 	trimbase = 
 	parent = rpm/noetic/rc_reason_msgs
-	previous = 
+	previous = cffe933
