--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rc_reason_msgs
-	base = 354331d
-	trimbase = 
+	base = 3f2c018
+	trimbase = 354331d
 	parent = upstream
 	previous = c7ab50a
