--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rc_reason_clients
-	base = 957958f
-	trimbase = 
+	base = e7c357b
+	trimbase = 957958f
 	parent = upstream
 	previous = 86cd584
