--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rc_reason_msgs
-	base = 63c6841
-	trimbase = 
+	base = c4d5a0a
+	trimbase = 63c6841
 	parent = upstream
 	previous = 86cd584
