--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rc_reason_clients
-	base = 6615052
-	trimbase = 
+	base = 0080c2c
+	trimbase = 6615052
 	parent = upstream
 	previous = 86cd584
