--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rc_reason_msgs
-	base = 5c33aa1
-	trimbase = 
+	base = 17df3cf
+	trimbase = 5c33aa1
 	parent = upstream
 	previous = 86cd584
