--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rc_reason_clients
-	base = 6c6b695
-	trimbase = 
+	base = 496565f
+	trimbase = 6c6b695
 	parent = upstream
 	previous = af771a2
