--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rc_reason_msgs
-	base = 1fd9bf8
-	trimbase = 
+	base = 9bebb60
+	trimbase = 1fd9bf8
 	parent = upstream
 	previous = af771a2
