--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rc_reason_clients
-	base = 7c041e2
-	trimbase = 
+	base = 914cad5
+	trimbase = 7c041e2
 	parent = upstream
 	previous = af771a2
