--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rc_reason_msgs
-	base = 9bfc75e
-	trimbase = 
+	base = 4884f11
+	trimbase = 9bfc75e
 	parent = upstream
 	previous = af771a2
