--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rc_reason_clients
-	base = dcd5681
-	trimbase = 
+	base = 7c0f00f
+	trimbase = dcd5681
 	parent = upstream
 	previous = 5207f8c
