--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rc_reason_msgs
-	base = 3b6bf5c
-	trimbase = 
+	base = 19d4dd4
+	trimbase = 3b6bf5c
 	parent = upstream
 	previous = 5207f8c
