--- a/package.xml
+++ b/package.xml
@@ -4,7 +4,7 @@
   schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>rc_reason_clients</name>
-  <version>0.3.1</version>
+  <version>0.4.0</version>
   <description>Clients for interfacing with Roboception reason modules on rc_visard and rc_cube.</description>
   <maintainer email="felix.ruess@roboception.de">Felix Ruess</maintainer>
   <license>BSD</license>
@@ -15,8 +15,7 @@
   <!-- system dependencies -->
   <buildtool_depend>catkin</buildtool_depend>
 
-  <depend condition="$ROS_PYTHON_VERSION == 2">python-requests</depend>
-  <depend condition="$ROS_PYTHON_VERSION == 3">python3-requests</depend>
+  <depend>python3-requests</depend>
 
   <depend>rospy</depend>
   <depend>message_runtime</depend>
