--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rc_reason_clients
-	base = ae848c5
-	trimbase = 
+	base = 9c40d64
+	trimbase = ae848c5
 	parent = upstream
 	previous = 5207f8c
