--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rc_reason_msgs
-	base = ef66f56
-	trimbase = 
+	base = 626d5a3
+	trimbase = ef66f56
 	parent = upstream
 	previous = 5207f8c
